# ChangeLog for app-text/bibletime
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/bibletime/ChangeLog,v 1.36 2006/10/21 17:10:38 squinky86 Exp $

*bibletime-1.6 (21 Oct 2006)

  21 Oct 2006; Jon Hood <squinky86@gentoo.org> -bibletime-1.6_rc1.ebuild,
  +bibletime-1.6.ebuild:
  Version bump, remove old release candidates.

*bibletime-1.6_rc1 (30 Aug 2006)

  30 Aug 2006; Jon Hood <squinky86@gentoo.org>
  -files/bibletime-1.6_beta2-gcc4.patch, -bibletime-1.6_beta2.ebuild,
  -bibletime-1.6_beta3.ebuild, +bibletime-1.6_rc1.ebuild:
  Version bump, remove old versions.

  07 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> bibletime-1.5.3.ebuild,
  bibletime-1.6_beta2.ebuild, bibletime-1.6_beta3.ebuild:
  Leave the re-autotooling to kde.eclass so that it can be fixed for autoconf
  2.60, see bug #139551.

*bibletime-1.6_beta3 (07 Jul 2006)

  07 Jul 2006; Jon Hood <squinky86@gentoo.org> -bibletime-1.5.2.ebuild,
  +bibletime-1.6_beta3.ebuild:
  Version bump for testing branch. Remove old version.

  21 Jun 2006; <nixnut@gentoo.org> bibletime-1.6_beta2.ebuild:
  Added ~ppc wrt bug #136709

  18 Jun 2006; Andrej Kacian <ticho@gentoo.org> bibletime-1.5.3.ebuild:
  Stable on x86. Bug #136720.

  15 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  bibletime-1.5.3.ebuild:
  ppc stable, bug #136720

  15 Jun 2006; Jon Hood <squinky86@gentoo.org>
  +files/bibletime-1.6_beta2-gcc4.patch, bibletime-1.6_beta2.ebuild:
  Add gcc-4 patch, #136825.

*bibletime-1.6_beta2 (13 Jun 2006)

  13 Jun 2006; Jon Hood <squinky86@gentoo.org> metadata.xml,
  -bibletime-1.4.2_pre1.ebuild, -bibletime-1.5.ebuild,
  -bibletime-1.5.1.ebuild, +bibletime-1.6_beta2.ebuild,
  bibletime-1.5.3.ebuild:
  Remove old versions, add testing version and new language packs, readd
  myself as maintainer. Mark 1.5.3 stable on amd64.

  20 Nov 2005; Joseph Jezak <josejx@gentoo.org> bibletime-1.5.2.ebuild:
  Marked ppc stable for bug #112834.
