@@ -2,18 +2,18 @@ DIST bibletime-1.5.3.tar.bz2 1172436 RMD160 3effb93a81bf6773deff8b11afb5eca6d019
 DIST bibletime-1.6.tar.bz2 1228793 RMD160 6a38ffa80d2ee44cc543f17ebe213d786b5b8c5c SHA1 914f74f2635ed175759e7f6bc9bc4d860eb89baf SHA256 ef3e83a27bfafb0a73141c417628b27692161b5dbde2cafdca1af31751d5b886
 DIST bibletime-i18n-1.5.1.tar.bz2 1007666 RMD160 7390f810ddec1b8309630054a8b87b5d56441825 SHA1 033e10502a2fe361100bdb9d2b652f6a16e5055d SHA256 fdd2056171221a08f045f9a0af5db63d39e761b49f146fc683956250265bebc5
 DIST bibletime-i18n-1.6.tar.bz2 992260 RMD160 69ac897213af5f745a725ddb7af13549038a8d7b SHA1 4ee02de3b9d4a2ed65397df80ee8405323ef04ea SHA256 b3e0564e9faf6d9d82c74a958e7eff2f35d2c50b638caa14ca87421bc19e0cd2
-EBUILD bibletime-1.5.3.ebuild 2103 RMD160 d4f1e6e10d794a54117b321d7ace76745d29bbcf SHA1 3fae8f09eb0ce36a386934c30346dff574063022 SHA256 02b9a272fe10251d3226566d317d4c4fb5b2009183c8aafa6d46d7325d63c2d6
-MD5 f131001a5508167107a3e9a4f44d3f1e bibletime-1.5.3.ebuild 2103
-RMD160 d4f1e6e10d794a54117b321d7ace76745d29bbcf bibletime-1.5.3.ebuild 2103
-SHA256 02b9a272fe10251d3226566d317d4c4fb5b2009183c8aafa6d46d7325d63c2d6 bibletime-1.5.3.ebuild 2103
-EBUILD bibletime-1.6.ebuild 2142 RMD160 ba810937e781811183ce762f1d3f1623040febfc SHA1 1c90980433739e07c1aa496c873bc2a52755af8f SHA256 c6bfee4ad2d1b1b37efdbe9c65e406b79b49ce332bf9a4d66971674b986ce030
-MD5 73f596eeed607878fd224da234023ddc bibletime-1.6.ebuild 2142
-RMD160 ba810937e781811183ce762f1d3f1623040febfc bibletime-1.6.ebuild 2142
-SHA256 c6bfee4ad2d1b1b37efdbe9c65e406b79b49ce332bf9a4d66971674b986ce030 bibletime-1.6.ebuild 2142
-MISC ChangeLog 5035 RMD160 386bdecbde7a6f9a5f18ebe8f32cf5d1009d267b SHA1 ac5b87e5faac5581985893c22e78712ce9ac205a SHA256 9259d5b279746eb5c3072f3b754987e8b63b8b0196b928a567678f2a3af51f6f
-MD5 06ed63f8113733edd0d981a2a207be37 ChangeLog 5035
-RMD160 386bdecbde7a6f9a5f18ebe8f32cf5d1009d267b ChangeLog 5035
-SHA256 9259d5b279746eb5c3072f3b754987e8b63b8b0196b928a567678f2a3af51f6f ChangeLog 5035
+EBUILD bibletime-1.5.3.ebuild 2159 RMD160 99952362233d5b0dc5c45c2f71fd32091012f6ea SHA1 8c4d4084de32a98473b989f240de7de613be8b1d SHA256 a72bc6f90960cd92aaf1945e9d9c85f25d2ca1226f93abeee6c326ebd0961e8d
+MD5 b42bec9e64815c12c0119190a3d1a75d bibletime-1.5.3.ebuild 2159
+RMD160 99952362233d5b0dc5c45c2f71fd32091012f6ea bibletime-1.5.3.ebuild 2159
+SHA256 a72bc6f90960cd92aaf1945e9d9c85f25d2ca1226f93abeee6c326ebd0961e8d bibletime-1.5.3.ebuild 2159
+EBUILD bibletime-1.6.ebuild 2198 RMD160 ebbe741572116cb920e995b224fa4c34828ee096 SHA1 987188ceaef3ed9e4e9a5053df6d47daae60ce28 SHA256 9b1326a7efcd4b34d755a4491fdd2e810728fd1bd7cebf4b9561b516dcca1eed
+MD5 9df1f966ce6e6415b6bf7fb24f086a6e bibletime-1.6.ebuild 2198
+RMD160 ebbe741572116cb920e995b224fa4c34828ee096 bibletime-1.6.ebuild 2198
+SHA256 9b1326a7efcd4b34d755a4491fdd2e810728fd1bd7cebf4b9561b516dcca1eed bibletime-1.6.ebuild 2198
+MISC ChangeLog 5167 RMD160 a3aabb7f835bd5787f709e7faaf6039c96f0536f SHA1 3c7e982c8495881c4cf8dcbcb3a050c6010a8db6 SHA256 0fc5d94606ecd7ef1ad4d63fccf3f0e36dc197fc57c4140e4880cb01872bacb3
+MD5 adbbcef2c30b19abdc25413d18c81ee0 ChangeLog 5167
+RMD160 a3aabb7f835bd5787f709e7faaf6039c96f0536f ChangeLog 5167
+SHA256 0fc5d94606ecd7ef1ad4d63fccf3f0e36dc197fc57c4140e4880cb01872bacb3 ChangeLog 5167
 MISC metadata.xml 519 RMD160 1efcfc9c151e957054d9193a108999e340a6f0cb SHA1 453f32c4c05179aff7961c7833adac4df5b9240f SHA256 edcd4a5617801c972da5472badc56579ac2e3916977a065f722d5391e7c4fb1d
 MD5 ad5e3891d47792bb4c0ed616a8d2aa8e metadata.xml 519
 RMD160 1efcfc9c151e957054d9193a108999e340a6f0cb metadata.xml 519
